# grandMatronPlugin

./: .gitignore  CMakeLists.txt  README.md
CMake/: Findrtneural.cmake
Modules/shared_plugin_helpers/ProcessorBase/: ProcessorBase.h
Plugins/: CMakeLists.txt
Plugins/GrandMatron/: CMakeLists.txt
Plugins/GrandMatron/Resources/weights/: neural_net_weights.json  neural_net_weights_20240115_3.json  neural_net_weights_sequences.json  neural_net_weights_v1.json
Plugins/GrandMatron/Source/: EmbeddedFonts.cpp  EmbeddedFonts.h  MatronFooterUI.cpp  MatronFooterUI.h  MatronHeaderUI.cpp  MatronHeaderUI.h  MatronLookAndFeel.cpp  MatronLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
training/NeuralAudioTraining.logicx/Alternatives/000/: DisplayState.plist  DisplayStateArchive  MetaData.plist  ProjectData
training/NeuralAudioTraining.logicx/Resources/: ProjectInformation.plist
training/pythonAndShellScripts/: .gitignore  librosaRequirements.txt  tensorflowRequirements.txt
training/pythonAndShellScripts/allScripts/: makeMono.sh  numpyfy.py  split.sh  splitAll.sh
training/pythonAndShellScripts/src/: neural_net_weights.json  train.py  vis.py  visFile.py
training/pythonAndShellScripts/viz/: diff.sh  fileDiff.sh  visualize_mono_frame.py  visualize_original_wavs.py  visualize_single_file.py
